Refactor configuration handling by introducing ConfigInterface and PHPConfigFetcher for better abstraction and dependency injection

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 title: "Component Oriented PHP Tutorials"
-description: Learn how to create PHP applications using standalone Composer packages instead of full frameworks.
+description: "Learn how to create PHP applications using standalone Composer packages instead of full frameworks."
