--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: "Component Oriented PHP Tutorials"
 description: "Learn how to create PHP applications using standalone Composer packages instead of full frameworks."
+
+plugins:
+  - jekyll-remote-theme
